# stimulus-py

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  duties.py  pyproject.toml
.github/workflows/: ci.yml  docker.yml
config/: ruff.toml
dockerfiles/stimulus-py-0..3.0.dev/: Dockerfile
dockerfiles/stimulus-py-0.3.0/: Dockerfile
dockerfiles/stimulus-py-0.3.0.dev/: Dockerfile
scripts/: gen_credits.py
src/stimulus/: __init__.py
src/stimulus/api/: __init__.py  api.py
src/stimulus/cli/: check_model.py  compare_tensors.py  encode.py  encode_csv.py  main.py  predict.py  shuffle_csv.py  split.py  split_csv.py  split_split.py  split_transforms.py  split_yaml.py  transform.py  transform_csv.py  tuning.py
src/stimulus/core/: __init__.py  registry.py
src/stimulus/data/: config_parser.py  data_config_parser.py  data_handlers.py  handlertorch.py  loaders.py
src/stimulus/data/encoding/: encoders.py  (+1 more)
src/stimulus/learner/: compare.py  device_utils.py  logging.py  optuna_tune.py  predict.py  raytune_learner.py
src/stimulus/typing/: __init__.py  protocols.py
src/stimulus/utils/: data_config_parsing.py  data_config_splitting.py  generic_utils.py  model_file_interface.py  performance.py  yaml_data.py  yaml_data_schema.py  yaml_model_schema.py
templates/: model_config_template.yaml
tests/cli/: test_check_model.py  test_compare_tensors.py  test_encode.py  test_encode_csv.py  test_shuffle_csv.py  test_split.py  test_split_csv.py  test_split_splits.py  test_split_transforms.py  test_transform.py  test_transform_csv.py  test_tuning.py
tests/cli/__snapshots__/: test_split_splits.ambr  test_split_transforms.ambr  test_split_yaml.ambr  test_transform_csv.ambr
tests/core/: __init__.py  mock.py  test_registry.py
tests/data/: test_data_handlers.py  test_experiment.py  test_handlertorch.py
tests/data/encoding/: test_encoder_registry.py  test_encoders.py
tests/data/interface/: __init__.py  test_data_config_parser.py  test_dataset_interface.py
tests/data/splitters/: test_splitter_registry.py
tests/data/splitting/: __init__.py  test_splitter_registry.py
tests/data/transform/: test_data_transformers.py  test_transform_registry.py
tests/data/transforming/: test_transform_registry.py
tests/learner/: test_logging.py  test_optuna_tune.py  test_raytune_learner.py
tests/learner/interface/: __init__.py  test_model_config_parser.py  test_model_schema.py
tests/test_data/ibis_znf395/: ibis_znf395.yaml  ibis_znf395_rc_transform.yaml  ibis_znf395_rcmaked_transform.yaml  ibis_znf395_unique_split.yaml
tests/test_data/safetensors/: titanic_1_1.safetensors  titanic_2.safetensors
tests/test_data/titanic/: titanic.yaml  titanic_stimulus.parquet  titanic_stimulus_cleaned.csv  titanic_stimulus_split.parquet  titanic_sub_config_0.yaml  titanic_unique_split.yaml  titanic_unique_transform.yaml  titanic_unique_transform_cleaned.yaml
tests/test_data/titanic_performant/: processed_perf_titanic.yaml  processed_perf_titanic_split.yaml  processed_perf_titanic_split_transform.yaml  titanic_perf.yaml  titanic_perf_split.csv  titanic_perf_split.yaml  titanic_perf_split_transform.yaml
tests/test_data/yaml_files/: int_param.yaml  wrong_field_type.yaml
tests/test_model/: conv_kan.py  conv_kan.yaml  titanic_model.py  titanic_model.yaml  titanic_model_cpu.yaml  titanic_perf_model.py  titanic_perf_model.yaml
tests/typing/: test_typing.py
tests/utils/: test_data_yaml.py  test_model_yaml.py
(+30 files in other folders)
